--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==20.0.4
 numpy==1.18.1
 pandas==1.0.1
 psycopg2==2.8.4
+psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.14.0
